@@ -16,8 +16,8 @@
 
         <!-- <hr> -->
         <h4>单元</h4>
-        <!-- <div [formGroupName]="table" class="model-full-width"> -->
-            <!-- <div formArrayName="cells_form">
+        <div [formGroup]="tableForm" class="model-full-width">
+            <div formArrayName="cells_form">
                 <mat-accordion>
                     <mat-expansion-panel *ngFor="let cell of cells_form.controls; let i=index" [formGroupName]="i" class="model-full-width">
                         <mat-expansion-panel-header>
@@ -65,8 +65,8 @@
 
                 </mat-accordion>
                 <button (click)="addCell()" type="button" mat-raised-button>添加记录</button>
-            </div> -->
-        <!-- </div> -->
+            </div>
+        </div>
 
 
         <!-- <hr> -->
